--- a/basics/index.html
+++ b/basics/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Hello world!</h1>
 
-    <p>I am a <strong>sentence<strong>.</p>
+    <p>I am a <strong>sentence</strong>.</p>
 
     <p class="highlighted"><em>Being inside is great!</em></p>
 
