--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Flexbox Demo</h1>
 
-    <section class="boxes">
+    <!-- <section class="boxes">
         <div class="a">
             Thing A
         </div>
@@ -20,6 +20,7 @@
         <div class="c">
             <p>Thing C</p>
             <p>Thing Other C</p>
+            <p>Lorem ipsum, dolor sit amet consectetur</p>
         </div>
         <div class="d">
             Thing D
@@ -30,19 +31,36 @@
         <div class="f">
             Thing F
         </div>
-    </section>
-
-    <!-- <section class="images">
-        <p><cite>All of the below images were found on a Google search</cite></p>
-        <p><img src="img/puppy-clap.jpg" alt="a puppy clapping hands"></p>
-        <p>This adorable puppy is clapping hands!</p>
-
-        <p><img src="img/puppy-smile.jpg" alt="a puppy looking happy"></p>
-        <p>This adorable puppy looks happy!</p>
-
-        <p><img src="img/puppy-kitty.jpg" alt="a puppy and a kitty"></p>
-        <p>This adorable puppy has a friend!</p>
     </section> -->
+
+    <section class="images">
+        <div class="column">
+            <p><cite>All of the below images were found on a Google search</cite></p>
+        </div>
+        <div class="flex-pool column">
+
+            <div>
+                <div class="card">      
+                    <img src="img/puppy-clap.jpg" alt="a puppy clapping hands">
+                    <p>This adorable puppy is clapping hands!</p>
+                </div>
+            </div>
+
+            <div>
+            <div class="card">
+                <img src="img/puppy-smile.jpg" alt="a puppy looking happy">
+                <p>This adorable puppy looks happy!</p>
+            </div>
+            </div>
+
+            <div>
+            <div class="card">
+                <img src="img/puppy-kitty.jpg" alt="a puppy and a kitty">
+                <p>This adorable puppy has a friend!</p>
+            </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
