--- a/responsive/index.html
+++ b/responsive/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Joel Ross">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Responsive Demo</title>
     <link rel="stylesheet" href="style.css">
