--- a/dom/index.html
+++ b/dom/index.html
@@ -6,29 +6,31 @@
 
   <!-- Bootstrap for styling -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="container">
 
   <header>
 		<h1>DOM Manipulation Demo</h1>
-		<p class="lead">(subtitle)</p>
 	</header>
 
 	<main>
-		<section>
-			<img class="float-right" src="img/puppy.jpg" alt="the puppy">
+    <section>
+      <button id="demo-button" class="btn btn-primary">Click me!</button>
+    </section>
+
+    <section id="emotion-image">
+      <img src="img/happy.png" alt="a happy face">
+      <p>I am happy!</p>
 		</section>
 
-		<section id="linkSection">
-			<h2>Some links...</h2>
-			<ul id="links" class="list-unstyled">
-				<li><a href="https://info340.github.io/">Course Textbook</a></li>
-				<li><a href="https://ischool.uw.edu/">iSchool</a></li>
-				<li><a href="https://www.google.com/search?q=puppies&tbm=isch">Puppies</a></li>
-	      <li><a href="">A link that goes nowhere</a></li>
-			</ul>
-		</section>
+		<section>
+			<h2>Cookie Jar</h2>
+	    <button id="add-button" class="btn btn-primary">Add</button>
+			<button id="eat-button" class="btn btn-primary">Eat</button>			
+			<div id="cookie-jar" class="my-1"></div>
+	  </section>
 
 	</main>  
 
