--- a/ajax/index.html
+++ b/ajax/index.html
@@ -18,9 +18,8 @@
     <p><a href="https://developer.github.com/v3/issues/#list-repository-issues">GitHub API</a></p>
 
     <form role="form" method="GET" action="https://api.github.com/search/repositories">
-      <input type="text" name="q" id="queryInput" class="form-control mb-2" placeholder="Search Github for...">
-      <input type="hidden" name="sort" value="stars">
-      <button type="submit" class="btn btn-primary">Search!</button>
+      <input value="info340c-sp20/demos" type="text" name="repo" id="repoInput" class="form-control mb-2" placeholder="Search Github for...">
+      <button type="submit" class="btn btn-primary">Submit!</button>
     </form>
   
     <div id="content">
@@ -29,6 +28,7 @@
   </main>
 
   <!-- include JavaScript files here! -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.4/fetch.min.js"></script>
   <script src="js/index.js"></script>
 
 </body>
